<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tvInput"
        android:gravity="end|bottom"
        android:textSize="48sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/calc_text"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1"
        >
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnSeven"
            android:textSize="20sp"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:backgroundTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnEight"
            android:textSize="20sp"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnNine"
            android:textSize="20sp"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onOperator"
            android:id="@+id/btnDivide"
            android:textSize="20sp"
            android:text="@string/divide"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1"
        >
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnFour"
            android:textSize="20sp"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:backgroundTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnFive"
            android:textSize="20sp"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnSix"
            android:textSize="20sp"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onOperator"
            android:id="@+id/btnMultiply"
            android:textSize="20sp"
            android:text="@string/multiply"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1"
        >
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnOne"
            android:textSize="20sp"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:backgroundTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnTwo"
            android:textSize="20sp"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onDigit"
            android:id="@+id/btnThree"
            android:textSize="20sp"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:onClick="onOperator"
            android:id="@+id/btnMinus"
            android:textSize="20sp"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:backgroundTint="@color/gray"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnDec"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="0"
            android:backgroundTint="@color/gray"
            android:onClick="onDecimal"
            android:text="@string/_dec"
            android:textColor="@color/black"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:onClick="onClear"
            android:id="@+id/btnClr"
            android:textSize="20sp"
            android:text="@string/_clr"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:onClick="onOperator"
            android:id="@+id/btnPlus"
            android:textSize="20sp"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1"
        >
        <Button
            android:onClick="onEqual"
            android:id="@+id/btnEqual"
            android:textSize="20sp"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:backgroundTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>